kubernetes/cluster/management/omni/service-k8s-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-k8s-proxy
  namespace: omni-system
spec:
  selector:
    app: omni
  ports:
    - name: k8s-proxy
      port: 80
      targetPort: k8s-proxy
