kubernetes/cluster/management/omni/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni
  namespace: omni-system
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  selector:
    app: omni
  ports:
    - name: omni
      port: 80
      targetPort: omni
    - name: siderolink-api
      port: 8090
      targetPort: siderolink-api
