kubernetes/cluster/management/omni/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-ingress
  namespace: omni-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # This is the "Magic Annotation" from your Helm chart:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  ingressClassName: traefik
  rules:
    - host: omni.calebbrown.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omni
                port:
                  number: 80
    - host: omni-k8s.calebbrown.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omni
                port:
                  number: 80
    - host: omni-siderolink.calebbrown.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omni
                port:
                  number: 80
